# fifteen-puzzle

./: .env  .gitignore  Cargo.toml  LICENSE  Makefile.toml  README.md  example.env  rustfmt.toml
cli/: Cargo.toml
cli/src/: main.rs
flipper/: Cargo.toml
flipper/.cargo/: config.toml
flipper/src/: main.rs  puzzle-10x10.icon
gba/: Cargo.toml
gba/.cargo/: config.toml
gba/src/: main.rs
gui/: Cargo.toml  build.rs  fifteen-gui.desktop  index.html
gui/src/: lib.rs  main.rs
ios/FifteenPuzzle/FifteenPuzzle/: main.m
ios/FifteenPuzzle/FifteenPuzzle.xcodeproj/: project.pbxproj
ios/FifteenPuzzle/FifteenPuzzle.xcodeproj/project.xcworkspace/xcuserdata/joel.xcuserdatad/: UserInterfaceState.xcuserstate
ios/FifteenPuzzle/FifteenPuzzle.xcodeproj/xcshareddata/xcschemes/: FifteenPuzzle.xcscheme
playdate/: Cargo.toml
playdate/src/: lib.rs
src/: lib.rs
