[package]
name = "fifteen-gui"
version = "0.1.0"
edition = "2024"
description = "A sliding fifteen puzzle"

[lib]
name = "fifteen_gui"
crate-type = ["staticlib", "rlib"]

[[bin]]
name = "fifteen-gui"
path = "src/main.rs"

[dependencies]
bevy = { version = "0.19.0"}
fifteen = {path = ".."}

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.4", features = ["wasm_js"] }

[package.metadata.bundle]
name = "Fifteen Puzzle"
identifier = "com.joelbuchheimmoore.FifteenPuzzle"
icon = ["../res/app_icon_1024@2x.png"]
category = "public.app-category.puzzle-games"
short_description = "A sliding fifteen puzzle"
