[package]
name = "fifteen-gui"
version = "0.1.0"
edition = "2024"
description = "A sliding fifteen puzzle"

[lib]
name = "fifteen_gui"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "fifteen-gui"
path = "src/main.rs"

[dependencies]
bevy = { version = "0.19.0"}
fifteen = {path = ".."}

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.4", features = ["wasm_js"] }

[target.'cfg(target_os = "android")'.dependencies]
bevy = { version = "0.19", features = ["android-native-activity"] }

[package.metadata.android]
package = "com.joelbuchheimmoore.fifteenpuzzle"
build_targets = ["aarch64-linux-android"]
resources = "../android_res"

[package.metadata.android.sdk]
target_sdk_version = 33
min_sdk_version = 26

[package.metadata.android.application]
icon = "@mipmap/ic_launcher"

[package.metadata.bundle]
name = "Fifteen Puzzle"
identifier = "com.joelbuchheimmoore.FifteenPuzzle"
icon = ["../res/app_icon_1024@2x.png"]
category = "public.app-category.puzzle-games"
short_description = "A sliding fifteen puzzle"
