[package]
name = "fifteen-playdate"
version = "0.1.0"
edition = "2024"
description = "Fifteen puzzle for the Playdate console"

[lib]
crate-type = ["dylib", "staticlib"]

[dependencies]
fifteen = { path = ".." }
rand = { version = "0.10.2", default-features = false }

[dependencies.playdate]
git = "https://github.com/joelbm24/playdate"
branch = "main"

[package.metadata.playdate]
name = "Fifteen Puzzle"
author = "Joel Buchheim-Moore"
bundle-id = "com.joelbuchheimmoore.fifteenpuzzle"
description = "The classic sliding puzzle"
image-path = "launcher"

[package.metadata.playdate.assets]
"launcher/card.png" = "assets/launcher/card.png"
"launcher/icon.png" = "assets/launcher/icon.png"
